# cross-platform-security-toolkit

./: .gitignore  README.md
.github/workflows/: ci.yml
tools/anti-cheat-memory-scanner/: CMakeLists.txt  conanfile.txt
tools/anti-cheat-memory-scanner/include/: IMemoryScanner.hpp
tools/anti-cheat-memory-scanner/platform/: linux_scanner.cpp  windows_scanner.cpp
tools/anti-cheat-memory-scanner/src/: MemoryScanner.cpp  main.cpp
tools/anti-cheat-memory-scanner/test_targets/: test_hook  test_hook.cpp  test_signature  test_signature.cpp
tools/anti-cheat-memory-scanner/tests/: test_scanner.cpp
tools/file-integrity-monitor/: CMakeLists.txt  conanfile.txt
tools/file-integrity-monitor/include/: IFileIntegrityMonitor.hpp
tools/file-integrity-monitor/src/: FileIntegrityMonitor.cpp  main.cpp
tools/hybrid-detector/: README.md
tools/hybrid-detector/cpp_backend/: CMakeLists.txt
tools/hybrid-detector/cpp_backend/include/: status_provider.h
tools/hybrid-detector/cpp_backend/src/: status_provider.cpp
tools/hybrid-detector/csharp_frontend/: HybridDetector.csproj  Program.cs
tools/ml-nids/: .gitignore  CMakeLists.txt  conanfile.txt
tools/ml-nids/include/: FeatureExtractor.hpp  INids.hpp
tools/ml-nids/platform/: linux_capture.cpp  windows_capture.cpp
tools/ml-nids/src/: FeatureExtractor.cpp  NidsEngine.cpp  main.cpp  train_model.cpp
tools/ml-nids/tests/: test_nids.cpp
tools/packet-sniffer/: CMakeLists.txt  conanfile.txt
tools/packet-sniffer/include/: IPacketCapture.hpp
tools/packet-sniffer/platform/: linux_capture.cpp  windows_capture.cpp
tools/packet-sniffer/src/: main.cpp
tools/packet-sniffer/tests/: test_interface.cpp
tools/ransomware-detector/: CMakeLists.txt  conanfile.txt
tools/ransomware-detector/include/: IRansomwareDetector.hpp
tools/ransomware-detector/platform/: linux_watcher.cpp  windows_watcher.cpp
tools/ransomware-detector/src/: RansomwareDetector.cpp  main.cpp
tools/ransomware-detector/tests/: test_detector.cpp
tools/system-monitor/: CMakeLists.txt  conanfile.txt
tools/system-monitor/include/: IProcessEnumerator.hpp
tools/system-monitor/platform/: linux_enumerator.cpp  windows_enumerator.cpp
tools/system-monitor/src/: main.cpp
